[gd_scene load_steps=23 format=2]

[ext_resource path="res://Graphics/Question.png" type="Texture" id=1]
[ext_resource path="res://Scripts/textQuestionsBox.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Nunito_regular16.font" type="BitmapFont" id=3]
[ext_resource path="res://Graphics/baseDataContainer.png" type="Texture" id=4]
[ext_resource path="res://Graphics/TriangleRNormal.png" type="Texture" id=5]
[ext_resource path="res://Graphics/TriangleRPressed.png" type="Texture" id=6]
[ext_resource path="res://Graphics/TriangleRHover.png" type="Texture" id=7]
[ext_resource path="res://Graphics/TriangleLNormal.png" type="Texture" id=8]
[ext_resource path="res://Graphics/TriangleLPressed.png" type="Texture" id=9]
[ext_resource path="res://Graphics/TriangleLHover.png" type="Texture" id=10]
[ext_resource path="res://Graphics/DragArea.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Oval.png" type="Texture" id=12]
[ext_resource path="res://Graphics/resizeArea.png" type="Texture" id=13]
[ext_resource path="res://Graphics/cross.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 26.1178, 8.54689 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10.104, 13 )

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 10, 11.6315 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10.104, 13 )

[sub_resource type="StyleBoxFlat" id=7]

content_margin_left = 5.0
content_margin_right = 4.0
content_margin_top = 3.0
content_margin_bottom = 3.0
bg_color = Color( 0.101562, 0.101562, 0.101562, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="Theme" id=8]

LineEdit/colors/cursor_color = Color( 0.941176, 0.941176, 0.941176, 1 )
LineEdit/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/selection_color = Color( 0.490196, 0.490196, 0.490196, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/styles/focus = null
LineEdit/styles/normal = SubResource( 7 )
LineEdit/styles/read_only = null

[node name="Patch9Frame" type="NinePatchRect"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_top = 27.0
margin_right = 452.0
margin_bottom = 372.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 1 )
patch_margin_left = 30
patch_margin_top = 30
patch_margin_right = 30
patch_margin_bottom = 30
script = ExtResource( 2 )
_sections_unfolded = [ "Mouse" ]

[node name="Label3" type="Label" parent="."]

self_modulate = Color( 0.125, 0.125, 0.125, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 14.0
margin_right = 94.0
margin_bottom = 31.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Speaking:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[node name="Speaking" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 118.0
margin_top = 15.0
margin_right = 171.0
margin_bottom = -313.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "Patient"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Mouse", "Rect", "custom_fonts" ]

[node name="NinePatchRect" type="NinePatchRect" parent="Speaking"]

editor/display_folded = true
self_modulate = Color( 0.133301, 0.133301, 0.133301, 1 )
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = -3.0
margin_right = 70.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
_sections_unfolded = [ "Margin", "Mouse", "Patch Margin", "Visibility" ]

[node name="speakingNext" type="TextureButton" parent="Speaking/NinePatchRect"]

self_modulate = Color( 0.710938, 1, 0.98645, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -7.5
margin_right = -3.0
margin_bottom = 7.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 4
_sections_unfolded = [ "Material", "Rect", "Textures", "Visibility" ]

[node name="speakingPrev" type="TextureButton" parent="Speaking/NinePatchRect"]

self_modulate = Color( 0.710938, 1, 0.98645, 1 )
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -7.5
margin_right = 14.0
margin_bottom = 7.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 4
_sections_unfolded = [ "Material", "Rect", "Textures", "Visibility" ]

[node name="QNumber" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 253.0
margin_top = 169.0
margin_right = 306.0
margin_bottom = -159.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "4"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Mouse", "Rect", "custom_fonts" ]

[node name="NinePatchRect" type="NinePatchRect" parent="QNumber"]

self_modulate = Color( 0.133301, 0.133301, 0.133301, 1 )
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -12.0
margin_top = -3.0
margin_right = 66.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
_sections_unfolded = [ "Margin", "Mouse", "Patch Margin", "Visibility" ]

[node name="AddOne" type="TextureButton" parent="QNumber/NinePatchRect"]

self_modulate = Color( 0.710938, 1, 0.98645, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -14.0
margin_top = -8.0
margin_right = -3.0
margin_bottom = 7.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 4
_sections_unfolded = [ "Material", "Rect", "Textures", "Visibility" ]

[node name="TakeOne" type="TextureButton" parent="QNumber/NinePatchRect"]

self_modulate = Color( 0.710938, 1, 0.98645, 1 )
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -7.5
margin_right = 14.0
margin_bottom = 7.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 4
_sections_unfolded = [ "Material", "Rect", "Textures", "Visibility" ]

[node name="NinePatchRect" type="NinePatchRect" parent="."]

self_modulate = Color( 0.125, 0.125, 0.125, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = 42.0
margin_right = -27.0
margin_bottom = 157.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
_sections_unfolded = [ "Mouse", "Patch Margin", "Visibility" ]

[node name="DragBar" type="TextureRect" parent="."]

editor/display_folded = true
self_modulate = Color( 0.796078, 0.0666667, 0.980392, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = 24.0
margin_bottom = -357.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 11 )
stretch_mode = 0
_sections_unfolded = [ "Mouse" ]

[node name="Draggable" type="Area2D" parent="DragBar"]

position = Vector2( 7.28784, 8 )
scale = Vector2( 0.352745, 0.375 )
z = 1
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DragBar/Draggable"]

position = Vector2( 4.39217, -1.9735 )
scale = Vector2( 1.3785, 4.08097 )
shape = SubResource( 1 )

[node name="Input" type="TextureRect" parent="."]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -11.5
margin_right = 12.0
margin_bottom = 10.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 12 )
stretch_mode = 0
_sections_unfolded = [ "Mouse" ]

[node name="Area2D" type="Area2D" parent="Input"]

position = Vector2( 8.68052, 8.57804 )
scale = Vector2( 0.320823, 0.314769 )
input_pickable = true
space_override = 3
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Input/Area2D"]

position = Vector2( -0.338074, 0.0246887 )
scale = Vector2( 2.97937, 2.43412 )
shape = SubResource( 2 )

[node name="Text" type="LineEdit" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 66.0
margin_right = -32.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
focus_mode = 2
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
context_menu_enabled = true
_sections_unfolded = [ "Margin", "custom_styles" ]

[node name="Resize" type="TextureRect" parent="."]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -17.0
margin_top = -17.0
margin_right = 7.0
margin_bottom = 6.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 13 )
stretch_mode = 0

[node name="Area2D" type="Area2D" parent="Resize"]

position = Vector2( 12.896, 13.07 )
scale = Vector2( 0.495295, 0.487675 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resize/Area2D"]

position = Vector2( 3.45882, 0.963131 )
scale = Vector2( 3.74054, 3.24493 )
shape = SubResource( 5 )

[node name="Label2" type="Label" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 47.0
margin_right = 93.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Question:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OutputContainer" type="VBoxContainer" parent="."]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
margin_top = 211.0
margin_right = 5.0
margin_bottom = -24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 14
alignment = 0
_sections_unfolded = [ "Margin", "Mouse", "custom_constants" ]

[node name="OutputCorrect" type="TextureRect" parent="OutputContainer"]

editor/display_folded = true
self_modulate = Color( 0.126129, 1, 0.0273438, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 17.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
texture = ExtResource( 12 )
stretch_mode = 0
_sections_unfolded = [ "Mouse" ]

[node name="Area2D" type="Area2D" parent="OutputContainer/OutputCorrect"]

position = Vector2( 8.17055, 8.71709 )
scale = Vector2( 0.381497, 0.350342 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutputContainer/OutputCorrect/Area2D"]

position = Vector2( -0.338074, 0.0246887 )
scale = Vector2( 2.97937, 2.43412 )
shape = SubResource( 2 )

[node name="OutputIncorrect1" type="TextureRect" parent="OutputContainer"]

editor/display_folded = true
self_modulate = Color( 0.960938, 0.0262756, 0.091994, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 31.0
margin_right = 17.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
texture = ExtResource( 12 )
stretch_mode = 0
_sections_unfolded = [ "Mouse" ]

[node name="Area2D" type="Area2D" parent="OutputContainer/OutputIncorrect1"]

position = Vector2( 8.35908, 9.10618 )
scale = Vector2( 0.387388, 0.362501 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutputContainer/OutputIncorrect1/Area2D"]

position = Vector2( -0.338074, 0.0246887 )
scale = Vector2( 2.97937, 2.43412 )
shape = SubResource( 6 )

[node name="OutputIncorrect2" type="TextureRect" parent="OutputContainer"]

editor/display_folded = true
self_modulate = Color( 0.960938, 0.0262756, 0.091994, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 62.0
margin_right = 17.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
texture = ExtResource( 12 )
stretch_mode = 0
_sections_unfolded = [ "Mouse" ]

[node name="Area2D" type="Area2D" parent="OutputContainer/OutputIncorrect2"]

position = Vector2( 8.15848, 9.30074 )
scale = Vector2( 0.381119, 0.368581 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutputContainer/OutputIncorrect2/Area2D"]

position = Vector2( -0.338074, 0.0246887 )
scale = Vector2( 2.97937, 2.43412 )
shape = SubResource( 2 )

[node name="OutputIncorrect3" type="TextureRect" parent="OutputContainer"]

editor/display_folded = true
self_modulate = Color( 0.960938, 0.0262756, 0.091994, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 93.0
margin_right = 17.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
texture = ExtResource( 12 )
stretch_mode = 0
_sections_unfolded = [ "Mouse" ]

[node name="Area2D" type="Area2D" parent="OutputContainer/OutputIncorrect3"]

position = Vector2( 8.15246, 9.10618 )
scale = Vector2( 0.380931, 0.362501 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutputContainer/OutputIncorrect3/Area2D"]

position = Vector2( -0.338074, 0.0246887 )
scale = Vector2( 2.97937, 2.43412 )
shape = SubResource( 2 )

[node name="Close" type="TextureButton" parent="."]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -39.0
margin_top = 15.0
margin_right = -12.0
margin_bottom = 42.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
expand = true

[node name="Label1" type="Label" parent="."]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -348.0
margin_top = 172.0
margin_right = -162.0
margin_bottom = -119.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Number of possible answers:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="OptionButton" type="OptionButton" parent="."]

visible = false
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -153.0
margin_top = 169.0
margin_right = -45.0
margin_bottom = 189.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="HBoxContainer" type="HBoxContainer" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 207.0
margin_right = -27.0
margin_bottom = -19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 6
alignment = 0
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="LabelContainer" type="VBoxContainer" parent="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 113.0
margin_bottom = 119.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/separation = 5
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="OutputCorrect" type="Label" parent="HBoxContainer/LabelContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 113.0
margin_bottom = 26.0
rect_min_size = Vector2( 0, 26 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Correct Answer:"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OutputIncorrect1" type="Label" parent="HBoxContainer/LabelContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 31.0
margin_right = 113.0
margin_bottom = 57.0
rect_min_size = Vector2( 0, 26 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Incorrect Answer:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OutputIncorrect2" type="Label" parent="HBoxContainer/LabelContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 62.0
margin_right = 113.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 26 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Incorrect Answer:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="OutputIncorrect3" type="Label" parent="HBoxContainer/LabelContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 93.0
margin_right = 113.0
margin_bottom = 119.0
rect_min_size = Vector2( 0, 26 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Incorrect Answer:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEditContainer" type="VBoxContainer" parent="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_right = 319.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 2
theme = SubResource( 8 )
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="OutputCorrect" type="LineEdit" parent="HBoxContainer/LineEditContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 157.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 27 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_styles/normal = SubResource( 7 )
focus_mode = 2
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
context_menu_enabled = true
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="OutputIncorrect1" type="LineEdit" parent="HBoxContainer/LineEditContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 31.0
margin_right = 157.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 27 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_styles/normal = SubResource( 7 )
focus_mode = 2
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
context_menu_enabled = true

[node name="OutputIncorrect2" type="LineEdit" parent="HBoxContainer/LineEditContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 62.0
margin_right = 157.0
margin_bottom = 89.0
rect_min_size = Vector2( 0, 27 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_styles/normal = SubResource( 7 )
focus_mode = 2
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
context_menu_enabled = true
_sections_unfolded = [ "Size Flags" ]

[node name="OutputIncorrect3" type="LineEdit" parent="HBoxContainer/LineEditContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 93.0
margin_right = 157.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 27 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 2
custom_styles/normal = SubResource( 7 )
focus_mode = 2
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
context_menu_enabled = true

[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]


